--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -26,22 +26,75 @@ hr {
 	border-bottom: 2px solid #ddd;
 	margin: 20px 0;
 }
-
-#content {
-	margin: 40px 0;
-}
-#content .wrapper {
-	margin: 0 auto;
+article {
+	margin: 40px auto;
 	width: 800px;
 	overflow: hidden;
 }
 
 /* Excample CSS */
-#carrousel {
-	list-style-type: none;
-}
-#carrousel li {
-	float: left;
-	width: 800px;
+ul {
+	border-radius: 0.2em;
+	-moz-border-radius: 0.2em;
+	-ms-border-radius: 0.2em;
+	-o-border-radius: 0.2em;
+	-webkit-border-radius: 0.2em;
 	height: 600px;
+	list-style-type: none;
+	overflow: hidden;
+	position: relative;
+	width: 800px;
+}
+ul li {
+	height: 600px;
+	position: absolute;
+	top: 0;
+	width: 800px;
+	transition: left 300ms ease;
+	-moz-transition: left 300ms ease;
+	-ms-transition: left 300ms ease;
+	-o-transition: left 300ms ease;
+	-webkit-transition: left 300ms ease;
+}
+ul li.selected {
+	left: 0;
+}
+ul li.left {
+	left: -100%;
+}
+ul li.right {
+	left: 100%;
+}
+nav {
+	margin: 1em;
+	text-align: center;
+}
+nav a {
+	background: #c5adbb;
+	border-radius: 100%;
+	-moz-border-radius: 100%;
+	-ms-border-radius: 100%;
+	-o-border-radius: 100%;
+	-webkit-border-radius: 100%;
+	display: inline-block;
+	height: 0.5em;
+	margin: 0.3em;
+	transform: scale( 1 );
+	-moz-transform: scale( 1 );
+	-ms-transform: scale( 1 );
+	-o-transform: scale( 1 );
+	-webkit-transform: scale( 1 );
+	transition: transform 100ms ease;
+	-moz-transition: -moz-transform 100ms ease;
+	-ms-transition: -ms-transition 100ms ease;
+	-webkit-transition: -webkit-transform 100ms ease;
+	width: 0.5em;
+}
+nav a.selected {
+	background: #fa405e;
+	transform: scale( 1.7 );
+	-moz-transform: scale( 1.7 );
+	-ms-transform: scale( 1.7 );
+	-o-transform: scale( 1.7 );
+	-webkit-transform: scale( 1.7 );
 }
